syntax = "proto3";

package tracking;

option go_package = "../../../api-gateway/pkg/tracking";

service TrackingByContainerNumber{
  rpc TrackByContainerNumber(Request) returns (TrackingByContainerNumberResponse) {};
}
service TrackingByBillNumber{
  rpc TrackByBillNumber(Request) returns (TrackingByBillNumberResponse) {};

}
enum Country{
  RU = 0;
  OTHER = 1;
}
message Request{
  string number = 1;
  string scac = 2;
  Country country = 3;
}
message InfoAboutMoving{
  int64 time = 1;
  string operation_name = 2;
  string location = 3;
  string vessel = 4;
}

message TrackingByContainerNumberResponse{
  string container = 1 ;
  string container_size = 2;
  string scac = 3;
  repeated InfoAboutMoving info_about_moving = 4;
}

message TrackingByBillNumberResponse{
  string billNo = 1;
  string scac = 3;
  repeated InfoAboutMoving info_about_moving = 4;
  int64 eta_final_delivery = 5;
}